fix #1422: show application icon in Ubuntu task bar